--- a/Website/index.html
+++ b/Website/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="assets/css/ie9.css"/><![endif]-->
 		<!--[if lte IE 8]>
         <link rel="stylesheet" href="assets/css/ie8.css"/><![endif]-->
+		<link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i" rel="stylesheet">
 	</head>
 	<body>
 
