Added a little to the beginning it kinda sucks

--- a/Website/index.html
+++ b/Website/index.html
@@ -52,15 +52,22 @@
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<div class="content" style="text-align: left;">
-										<h3>The problem:</h3>
+										<h2>Our Goal:</h2>
 										<ul>
-											<li>We can</li>
-											<li>Write stuff</li>
-											<li>Here</li>
+
+											To help people stay connected with their long distance friendships<br/>
+											by helping them create meaningful memories and making it easier to talk with each other.
 										</ul>
-										<h3>Our solution:</h3>
+										<h2>Our solution:</h2>
 										<ul>
-											We made an app!
+
+											We designed a phone app that emphasizes one-on-one relationships with people.<br/>
+											Our major focuses were to:
+											<br/><br/>
+											<li>Have face-to-face communication through video calls</li>
+											<li>Easily schedule video calls while friends are in different time zones</li> 
+											<li>Create and share one-on-one memories with your closest friends</li>
+
 										</ul>
 										</div>
 								</div>
