Yang's pictures and some other minor layout changes

--- a/Website/index.html
+++ b/Website/index.html
@@ -149,13 +149,13 @@
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
 										<article style="height:500px; width:250px;">
-											<div class="image"><img src="images/temp.jpg" alt="" /></div>
+											<div class="image"><img src="images/Aggie.jpg" alt="" /></div>
 											<h4 class="major">Aggie Tutia</h4>
 											<p>Human Centered Design and Engineering</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
 										<article style="height:500px; width:250px;">
-											<div class="image"><img src="images/temp.jpg" alt="" /></div>
+											<div class="image"><img src="images/Yang.jpg" alt="" /></div>
 											<h4 class="major">Yang Liu</h4>
 											<p>Industrial and Systems Engineering</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
@@ -176,13 +176,13 @@
 									<!-- <a href="#" class="special">Learn more</a> -->
 								</article>
 								<article style="height:90px; width:250px;">						
-										<a href="files/presentation01.pdf" target="_blank" style="display: block; text-align:center;">Initial Presentation</a>
+										<a href="files/presentation01.pdf" target="_blank" style="display: block; text-align:center;">Initial Slides</a>
 								</article>
 								<article style="height:90px; width:250px;">
 									<a href="report_2.pdf" target="_blank" style="display: block; text-align:center;">Final Report</a>
 								</article>
 								<article style="height:90px; width:250px;">
-									<a href="presentation_2.pdf" target="_blank" style="display: block; text-align:center;">Final Presentation</a>
+									<a href="presentation_2.pdf" target="_blank" style="display: block; text-align:center;">Final Slides</a>
 								</article>
 							</section>
 						</div>
