Edited About Us section. Shrunk padding, widened frames to better fit discipline names

--- a/Website/index.html
+++ b/Website/index.html
@@ -42,7 +42,7 @@
 							<div class="logo" style="margin-bottom: 0px;"><img src="images/logo.png" width="300px" height="auto"></img></div>
 							<h2 style="font-size: 0;"></h2>
 							<h3></h3>
-							<h3 style="padding-left: 20px;"><br>Bringing long distance friendships closer<h3>
+							<h3 style="padding-left: 20px;"><br>bringing long-distance friendships closer<h3>
 						</div>
 					</section>
 
@@ -52,11 +52,11 @@
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<div class="content" style="text-align: left;">
-										<h2>Our Goal:</h2>
+										<h2>our goal:</h2>
 										<ul>
 
-											To help people stay connected with their long distance friendships<br/>
-											by helping them create meaningful memories and making it easier to talk with each other.
+											We aim to help people stay connected with their long-distance friendships <br/>
+											by helping them create meaningful memories and making it easy to talk with each other.
 										</ul>
 										<h2>Our solution:</h2>
 										<ul>
@@ -136,25 +136,25 @@
 								<div class="inner">
 									<h2 class="major">About Us</h2>
 									<section class="features">
-										<article style="height:500px; width:250px;">
+										<article style="height:500px; width:260px;">
 											<div class="image"><img src="images/Add.png" alt="" /></div>
 											<h4 class="major">Add Gritman</h4>
 											<p>Computer Science and Engineering</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
-										<article style="height:500px; width:250px;">
+										<article style="height:500px; width:260px;">
 											<div class="image"><img src="images/temp.jpg" alt="" /></div>
 											<h4 class="major">Kellan Grant</h4>
 											<p>Computer Science and Engineering</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
-										<article style="height:500px; width:250px;">
+										<article style="height:500px; width:260px;">
 											<div class="image"><img src="images/Aggie.jpg" alt="" /></div>
 											<h4 class="major">Aggie Tutia</h4>
-											<p>Human Centered Design and Engineering</p>
+											<p>Human-Computer Interaction and Design</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
-										<article style="height:500px; width:250px;">
+										<article style="height:500px; width:260px;">
 											<div class="image"><img src="images/Yang.jpg" alt="" /></div>
 											<h4 class="major">Yang Liu</h4>
 											<p>Industrial and Systems Engineering</p>
