Added text and pictures for features

--- a/Website/index.html
+++ b/Website/index.html
@@ -58,7 +58,7 @@
 											We aim to help people stay connected with their long-distance friendships <br/>
 											by helping them create meaningful memories and making it easy to talk with each other.
 										</ul>
-										<h2>Our solution:</h2>
+										<h2>our solution:</h2>
 										<ul>
 
 											We designed a phone app that emphasizes one-on-one relationships with people.<br/>
@@ -77,10 +77,10 @@
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
 									<div class="content">
-										<h2 class="major">Feature 1</h2>
-										<p>This is our awesome feature 1 </p>
+										<h2 class="major">best friends</h2>
+										<p>When you enter the app, the first thing you see are your best friends and a map of where they are around the world. Even though you aren’t close to them physically, you can check up on them whenever. All the main functions are within the + sign and pop out as “add friend”, “create memory” and “schedule video call”.</p>
 									</div>
-									<img src="images/temp.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
+									<img src="images/feat01.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
 								</div>
 							</section>
 
@@ -88,11 +88,10 @@
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<div class="content">
-										<h2 class="major">Feature 2</h2>
-										<p>This is our awesome feature 2 with two images</p>
+										<h2 class="major">friendship</h2>
+										<p>This is where you can see everything about your friendship with another friend. Here you can schedule a video call with them, look through some old memories, or check out your shared timeline of memories and milestones.</p>
 									</div>
-									<img src="images/temp.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
-									<img src="images/temp.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
+									<img src="images/feat02.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
 								</div>
 							</section>
 
@@ -100,10 +99,11 @@
 							<section id="three" class="wrapper spotlight style1">
 								<div class="inner">
 									<div class="content">
-										<h2 class="major">Feature 3</h2>
-											<p>This is our awesome feature 3</p>
+										<h2 class="major">scheduling</h2>
+											<p>Because we know you have friends all over, we accommodate for that in our scheduler. Taking your time zone and theirs, we are able to let you know the exact time difference between you and your friend when scheduling a Voice Call. Before a Video Call is set, it must be confirmed by the other friend. You can send an edit request for a changed time, and you may also delete the Video Call if need be.</p>
 										</div>
-										<img src="images/temp.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
+										<img src="images/feat03a.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
+										<img src="images/feat03b.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
 								</div>
 							</section>
 
@@ -111,10 +111,11 @@
 							<section id="four" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<div class="content">
-										<h2 class="major">Feature 4</h2>
-										<p>This is our awesome feature 4</p>
+										<h2 class="major">memory</h2>
+										<p>Every moment with your best friend is special and we want both of you to treasure that with our memories feature. You can create a memory with a friend, fill it with photos, datemark it, and cherish it forever. If you need to, it’s easy to move around, add and delete the photos in the Memory.</p>
 									</div>
-									<img src="images/temp.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
+									<img src="images/feat04a.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
+									<img src="images/feat04b.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
 								</div>
 							</section>
 
@@ -122,7 +123,7 @@
 							<section id="video" class="wrapper spotlight style1" >
 								<div class="inner">
 									<div class="content">
-										<h2 class="major">Video Prototype (No Video Yet)</h2>
+										<h2 class="major">video prototype (No Video Yet)</h2>
 										<div class="video-content" style="width:760px; margin:0 auto;">
 											<iframe width="760" height="515" src="https://www.youtube.com/embed/ObiqJzfyACM" frameborder="0" allowfullscreen></iframe>
 										</div>
@@ -134,7 +135,7 @@
 						<!-- about-us -->
 							<section id="about-us" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">About Us</h2>
+									<h2 class="major">about us</h2>
 									<section class="features">
 										<article style="height:500px; width:260px;">
 											<div class="image"><img src="images/Add.png" alt="" /></div>
