Changed a lot of colors and updated some text

--- a/Website/index.html
+++ b/Website/index.html
@@ -55,18 +55,18 @@
 										<h2>our goal:</h2>
 										<ul>
 
-											We aim to help people stay connected with their long-distance friendships <br/>
+											We aim to help people stay connected with their long-distance friendships<br/>
 											by helping them create meaningful memories and making it easy to talk with each other.
 										</ul>
 										<h2>our solution:</h2>
 										<ul>
 
-											We designed a phone app that emphasizes one-on-one relationships with people.<br/>
-											Our major focuses were to:
+											After thorough research and testing, we have designed a one of a kind app<br/>
+											that emphasizes deep one-on-one friendships. We focused on:
 											<br/><br/>
-											<li>Have face-to-face communication through video calls</li>
-											<li>Easily schedule video calls while friends are in different time zones</li> 
-											<li>Create and share one-on-one memories with your closest friends</li>
+											<li>Video Calling for face-to-face communication</li>
+											<li>Scheduling Video Calls around time zones</li> 
+											<li>Creating and reflecting upon one-on-one memories with your closest friends</li>
 
 										</ul>
 										</div>
@@ -144,7 +144,7 @@
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
 										<article style="height:500px; width:260px;">
-											<div class="image"><img src="images/temp.jpg" alt="" /></div>
+											<div class="image"><img src="images/Kellan.png" alt="" /></div>
 											<h4 class="major">Kellan Grant</h4>
 											<p>Computer Science and Engineering</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
@@ -170,7 +170,7 @@
 				<!-- documents -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Documents (Last 2 links currently broken)</h2>
+							<h2 class="major">Documents (Far-right link currently broken)</h2>
 							<section class="features">
 								<article style="height:90px; width:250px;">				
 									<a href="files/report01.pdf" target="_blank" style="display: block; text-align:center;">Initial Report</a> 							
@@ -180,10 +180,10 @@
 										<a href="files/presentation01.pdf" target="_blank" style="display: block; text-align:center;">Initial Slides</a>
 								</article>
 								<article style="height:90px; width:250px;">
-									<a href="report_2.pdf" target="_blank" style="display: block; text-align:center;">Final Report</a>
+									<a href="files/report02.pdf" target="_blank" style="display: block; text-align:center;">Final Report</a>
 								</article>
 								<article style="height:90px; width:250px;">
-									<a href="presentation_2.pdf" target="_blank" style="display: block; text-align:center;">Final Slides</a>
+									<a href="files/presentation02.pdf" target="_blank" style="display: block; text-align:center;">Final Slides</a>
 								</article>
 							</section>
 						</div>
