Change one word.

--- a/Website/index.html
+++ b/Website/index.html
@@ -78,7 +78,7 @@
 								<div class="inner">
 									<div class="content">
 										<h2 class="major">best friends</h2>
-										<p>When you enter the app, the first thing you see are your best friends and a map of where they are around the world. Even though you aren’t close to them physically, you can check up on them whenever. All the main functions are within the + sign and pop out as “add friend”, “create memory” and “schedule video call”.</p>
+										<p>When you enter the app, the first thing you see are your best friends and a map of where they are around the world. Even though you are not close to them physically, you can check up on them whenever. All the main functions are within the + sign and pop out as “add friend”, “create memory” and “schedule video call”.</p>
 									</div>
 									<img src="images/feat01.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
 								</div>
