--- a/Website/index.html
+++ b/Website/index.html
@@ -170,7 +170,7 @@
 				<!-- documents -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Documents (Far-right link currently broken)</h2>
+							<h2 class="major">documents (Far-right link currently broken)</h2>
 							<section class="features">
 								<article style="height:90px; width:250px;">				
 									<a href="files/report01.pdf" target="_blank" style="display: block; text-align:center;">Initial Report</a> 							
