--- a/Website/index.html
+++ b/Website/index.html
@@ -77,10 +77,11 @@
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
 									<div class="content">
-										<h2 class="major">best friends</h2>
+										<div id="headers">design<br/><br/></div>
+										<h2 class="major"><br/>best friends</h2>
 										<p>When you enter the app, the first thing you see are your best friends and a map of where they are around the world. Even though you aren't close to them physically, you can check up on them whenever. All the main functions are within the + sign and pop out as “add friend”, “create memory” and “schedule video call”.</p>
 									</div>
-									<img src="images/feat01.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
+									<img src="images/feat01.jpg" width="250px" height="auto" style="margin: 60px;" alt="" />
 								</div>
 							</section>
 
@@ -91,7 +92,7 @@
 										<h2 class="major">friendship</h2>
 										<p>This is where you can see everything about your friendship with another friend. Here you can schedule a video call with them, look through some old memories, or check out your shared timeline of memories and milestones.</p>
 									</div>
-									<img src="images/feat02.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
+									<img src="images/feat02.jpg" width="250px" height="auto" style="margin: 60px;" alt="" />
 								</div>
 							</section>
 
@@ -102,8 +103,8 @@
 										<h2 class="major">scheduling</h2>
 											<p>Because we know you have friends all over, we accommodate for that in our scheduler. Taking your time zone and theirs, we are able to let you know the exact time difference between you and your friend when scheduling a Voice Call. Before a Video Call is set, it must be confirmed by the other friend. You can send an edit request for a changed time, and you may also delete the Video Call if need be.</p>
 										</div>
-										<img src="images/feat03a.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
-										<img src="images/feat03b.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
+										<img src="images/feat03a.jpg" width="250px" height="auto" style="margin: 60px;" alt="" />
+										<img src="images/feat03b.jpg" width="250px" height="auto" style="margin: 0px;" alt="" />
 								</div>
 							</section>
 
@@ -114,8 +115,8 @@
 										<h2 class="major">memory</h2>
 										<p>Every moment with your best friend is special and we want both of you to treasure that with our memories feature. You can create a memory with a friend, fill it with photos, datemark it, and cherish it forever. If you need to, it’s easy to move around, add and delete the photos in the Memory.</p>
 									</div>
-									<img src="images/feat04a.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
-									<img src="images/feat04b.jpg" width="250px" height="auto" style="margin: 20px;" alt="" />
+									<img src="images/feat04a.jpg" width="250px" height="auto" style="margin: 60px;" alt="" />
+									<img src="images/feat04b.jpg" width="250px" height="auto" style="margin: 0px;" alt="" />
 								</div>
 							</section>
 
