changed some stuff: formatting youtube link

--- a/Website/index.html
+++ b/Website/index.html
@@ -126,7 +126,7 @@
 									<div class="content">
 										<h2 class="major">video prototype (No Video Yet)</h2>
 										<div class="video-content" style="width:760px; margin:0 auto;">
-											<iframe width="760" height="515" src="https://www.youtube.com/embed/ObiqJzfyACM" frameborder="0" allowfullscreen></iframe>
+											<iframe width="760" height="515" src="https://www.youtube.com/embed/FGZRsaJheGw" frameborder="0" allowfullscreen></iframe>
 										</div>
 									</div>
 								</div>
@@ -138,25 +138,25 @@
 								<div class="inner">
 									<h2 class="major">about us</h2>
 									<section class="features">
-										<article style="height:500px; width:260px;">
+										<article style="height:500px; width:200px;">
 											<div class="image"><img src="images/Add.png" alt="" /></div>
 											<h4 class="major">Add Gritman</h4>
 											<p>Computer Science and Engineering</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
-										<article style="height:500px; width:260px;">
-											<div class="image"><img src="images/Kellan.png" alt="" /></div>
+										<article style="height:500px; width:200px;">
+											<div class="image"><img src="images/Kellan.jpg" alt="" /></div>
 											<h4 class="major">Kellan Grant</h4>
 											<p>Computer Science and Engineering</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
-										<article style="height:500px; width:260px;">
+										<article style="height:500px; width:200px;">
 											<div class="image"><img src="images/Aggie.jpg" alt="" /></div>
 											<h4 class="major">Aggie Tutia</h4>
 											<p>Human-Computer Interaction and Design</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
-										<article style="height:500px; width:260px;">
+										<article style="height:500px; width:200px;">
 											<div class="image"><img src="images/Yang.jpg" alt="" /></div>
 											<h4 class="major">Yang Liu</h4>
 											<p>Industrial and Systems Engineering</p>
@@ -171,19 +171,19 @@
 				<!-- documents -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">documents (Far-right link currently broken)</h2>
+							<h2 class="major">documents</h2>
 							<section class="features">
-								<article style="height:90px; width:250px;">				
+								<article style="height:90px; width:200px;">				
 									<a href="files/report01.pdf" target="_blank" style="display: block; text-align:center;">Initial Report</a> 							
 									<!-- <a href="#" class="special">Learn more</a> -->
 								</article>
-								<article style="height:90px; width:250px;">						
+								<article style="height:90px; width:200px;">						
 										<a href="files/presentation01.pdf" target="_blank" style="display: block; text-align:center;">Initial Slides</a>
 								</article>
-								<article style="height:90px; width:250px;">
+								<article style="height:90px; width:200px;">
 									<a href="files/report02.pdf" target="_blank" style="display: block; text-align:center;">Final Report</a>
 								</article>
-								<article style="height:90px; width:250px;">
+								<article style="height:90px; width:200px;">
 									<a href="files/presentation02.pdf" target="_blank" style="display: block; text-align:center;">Final Slides</a>
 								</article>
 							</section>
