changed color of background plus some other stuff

--- a/Website/index.html
+++ b/Website/index.html
@@ -78,10 +78,10 @@
 								<div class="inner">
 									<div class="content">
 										<div id="headers">design<br/><br/></div>
-										<h2 class="major"><br/>best friends</h2>
-										<p>When you enter the app, the first thing you see are your best friends and a map of where they are around the world. Even though you aren't close to them physically, you can check up on them whenever. All the main functions are within the + sign and pop out as “add friend”, “create memory” and “schedule video call”.</p>
+										<h2 class="major"><br/>friendship</h2>
+										<p>This is where you can see everything about your friendship with another friend. Here you can schedule a video call with them, look through some old memories, or check out your shared timeline of memories and milestones.</p>
 									</div>
-									<img src="images/feat01.jpg" width="250px" height="auto" style="margin: 60px;" alt="" />
+									<img src="images/feat02.jpg" width="250px" height="auto" style="margin: 60px;" alt="" />
 								</div>
 							</section>
 
@@ -89,10 +89,11 @@
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<div class="content">
-										<h2 class="major">friendship</h2>
-										<p>This is where you can see everything about your friendship with another friend. Here you can schedule a video call with them, look through some old memories, or check out your shared timeline of memories and milestones.</p>
+										<h2 class="major">scheduling</h2>
+										<p>Because we know you have friends all over, we accommodate for that in our scheduler. Taking your time zone and theirs, we are able to let you know the exact time difference between you and your friend when scheduling a Video Call. Before a Video Call is set, it must be confirmed by the other friend. You can send an edit request for a changed time, and you may also delete the Video Call if need be.</p>
 									</div>
-									<img src="images/feat02.jpg" width="250px" height="auto" style="margin: 60px;" alt="" />
+									<img src="images/feat03a.jpg" width="250px" height="auto" style="margin: 60px;" alt="" />
+									<img src="images/feat03b.jpg" width="250px" height="auto" style="margin: 0px;" alt="" />
 								</div>
 							</section>
 
@@ -100,11 +101,11 @@
 							<section id="three" class="wrapper spotlight style1">
 								<div class="inner">
 									<div class="content">
-										<h2 class="major">scheduling</h2>
-											<p>Because we know you have friends all over, we accommodate for that in our scheduler. Taking your time zone and theirs, we are able to let you know the exact time difference between you and your friend when scheduling a Voice Call. Before a Video Call is set, it must be confirmed by the other friend. You can send an edit request for a changed time, and you may also delete the Video Call if need be.</p>
+										<h2 class="major">video call</h2>
+											<p>Either through a scheduled time or spontaneous decision, you can easily call your best friend through the app for a meaningful conversation. </p>
 										</div>
-										<img src="images/feat03a.jpg" width="250px" height="auto" style="margin: 60px;" alt="" />
-										<img src="images/feat03b.jpg" width="250px" height="auto" style="margin: 0px;" alt="" />
+										<img src="images/feat05a.jpg" width="250px" height="auto" style="margin: 60px;" alt="" />
+										<img src="images/feat05b.jpg" width="250px" height="auto" style="margin: 0px;" alt="" />
 								</div>
 							</section>
 
