new color for bottom buttons

--- a/Website/index.html
+++ b/Website/index.html
@@ -125,8 +125,8 @@
 							<section id="video" class="wrapper spotlight style1" >
 								<div class="inner">
 									<div class="content">
-										<h2 class="major">video prototype (No Video Yet)</h2>
-										<div class="video-content" style="width:760px; margin:0 auto;">
+										<div id="headers">video prototype<br/></div>
+										<div class="video-content" style="width:760px; margin:0 auto;padding-top:20px;">
 											<iframe width="760" height="515" src="https://www.youtube.com/embed/FGZRsaJheGw" frameborder="0" allowfullscreen></iframe>
 										</div>
 									</div>
@@ -137,7 +137,7 @@
 						<!-- about-us -->
 							<section id="about-us" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">about us</h2>
+									<div id="headers">about us<br/></div>
 									<section class="features">
 										<article style="height:500px; width:200px;">
 											<div class="image"><img src="images/Add.png" alt="" /></div>
@@ -172,19 +172,19 @@
 				<!-- documents -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">documents</h2>
+							<div id="headers">documents<br/></div>
 							<section class="features">
-								<article style="height:90px; width:200px;">				
+								<article style="height:90px; width:200px; background-color: #807c7c69;">				
 									<a href="files/report01.pdf" target="_blank" style="display: block; text-align:center;">Initial Report</a> 							
 									<!-- <a href="#" class="special">Learn more</a> -->
 								</article>
-								<article style="height:90px; width:200px;">						
+								<article style="height:90px; width:200px; background-color: #807c7c69;" >						
 										<a href="files/presentation01.pdf" target="_blank" style="display: block; text-align:center;">Initial Slides</a>
 								</article>
-								<article style="height:90px; width:200px;">
+								<article style="height:90px; width:200px; background-color: #807c7c69;">
 									<a href="files/report02.pdf" target="_blank" style="display: block; text-align:center;">Final Report</a>
 								</article>
-								<article style="height:90px; width:200px;">
+								<article style="height:90px; width:200px; background-color: #807c7c69;">
 									<a href="files/presentation02.pdf" target="_blank" style="display: block; text-align:center;">Final Slides</a>
 								</article>
 							</section>
