adddddded download icon and updated youtube link

--- a/Website/index.html
+++ b/Website/index.html
@@ -18,6 +18,7 @@
 		<!--[if lte IE 8]>
         <link rel="stylesheet" href="assets/css/ie8.css"/><![endif]-->
 		<link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
 	<body>
 		<!-- This is a test comment -->
@@ -127,7 +128,7 @@
 									<div class="content">
 										<div id="headers">video prototype<br/></div>
 										<div class="video-content" style="width:760px; margin:0 auto;padding-top:20px;">
-											<iframe width="760" height="515" src="https://www.youtube.com/embed/FGZRsaJheGw" frameborder="0" allowfullscreen></iframe>
+											<iframe width="760" height="515" src="https://www.youtube.com/embed/MppDhuGf1L0" frameborder="0" allowfullscreen></iframe>
 										</div>
 									</div>
 								</div>
@@ -175,17 +176,21 @@
 							<div id="headers">documents<br/></div>
 							<section class="features">
 								<article style="height:90px; width:200px; background-color: #807c7c69;">				
-									<a href="files/report01.pdf" target="_blank" style="display: block; text-align:center;">Initial Report</a> 							
+									<a href="files/report01.pdf" target="_blank" style="display: block; text-align:center;">Initial Report</a>
+									<center><a href="files/report01.pdf" target="_blank" style="display: block; text-align:center;"><i class="material-icons" style="padding-top:10px;">file_download</i></a> 	</center>						
 									<!-- <a href="#" class="special">Learn more</a> -->
 								</article>
 								<article style="height:90px; width:200px; background-color: #807c7c69;" >						
 										<a href="files/presentation01.pdf" target="_blank" style="display: block; text-align:center;">Initial Slides</a>
+										<center><a href="files/presentation01.pdf" target="_blank" style="display: block; text-align:center;"><i class="material-icons" style="padding-top:10px;">file_download</i> </a>	</center>
 								</article>
 								<article style="height:90px; width:200px; background-color: #807c7c69;">
 									<a href="files/report02.pdf" target="_blank" style="display: block; text-align:center;">Final Report</a>
+									<center><a href="files/report02.pdf" target="_blank" style="display: block; text-align:center;"><i class="material-icons" style="padding-top:10px;">file_download</i> </a>	</center>
 								</article>
 								<article style="height:90px; width:200px; background-color: #807c7c69;">
 									<a href="files/presentation02.pdf" target="_blank" style="display: block; text-align:center;">Final Slides</a>
+									<center><a href="files/presentation02.pdf" target="_blank" style="display: block; text-align:center;"><i class="material-icons" style="padding-top:10px;">file_download</i> </a>	</center>
 								</article>
 							</section>
 						</div>
